--- a/src/dbz/agregar-personaje/agregar.component.html
+++ b/src/dbz/agregar-personaje/agregar.component.html
@@ -1,5 +1,5 @@
 <div class="card"> 
-    <h3 class="card-header">Agregar</h3>
+    <h3 class="card-header">Agregar Personajes</h3>
     <div class="card-body">
         <form (ngSubmit)="agregar()">
             <input type="text" class="form-control" placeholder="Nombre" name="nombre" [(ngModel)]="personaje.nombre" />
