--- a/src/dbz/main-page/main-page.component.html
+++ b/src/dbz/main-page/main-page.component.html
@@ -1,19 +1,17 @@
-
-
 <h3>Dragon Ball Z</h3>
 <hr>
 <div class="container">
-
     <div class="row">
-        <div class="col">
-            <app-personajes [personajes]="personajes"></app-personajes>
-        </div>
-        
-        <div class="col">
-            <app-agregar 
+        <div class="col-md-6 mt-2">
+            <!-- <app-agregar 
             [personaje]="personaje"
             (onNuevoPersonaje)="agregarPersonaje($event)"
-            ></app-agregar>
+            ></app-agregar> -->
+            <app-agregar [personaje]="personaje"></app-agregar>
+        </div>
+        <div class="col-md-6 mt-2">
+            <!-- <app-personajes [personajes]="personajes"></app-personajes> -->
+            <app-personajes></app-personajes>
         </div>
     </div>
 </div>
