--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,9 @@
 <div class="d-flex">
-  <div class="bg-dark border-right p-3" id="sidebar">
-    <h3 class="text-light">
-      Gifs-App
-    </h3>
-    <hr class="text-white"/>
-    <div class="list-group list-reset">
-      <a href="#"
-        class="list-group-item list-group-item-action">
-        Dashboard
-      </a>
-    </div>
-  </div>
 
-  <div class="container">
-    <div class="row p-3">
-      <div class="col">
-        <h5>Buscar:</h5>
-        <input type="text" class="form-control" placeholder="Buscar gifs...">
-      </div>
-    </div>
+  <!-- Sidebar -->
+  <app-sidebar></app-sidebar>
+  <!-- End Sidebar -->
 
-    <hr/>
-
-    <div class="row">
-      <div class="col">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, porro nulla nobis iste autem quibusdam fugiat odit exercitationem aut aliquam eveniet deserunt quo repellat itaque illum, commodi harum. Sunt, voluptatem.
-      </div>
-    </div>
-  </div>
+  <app-gifs-page  class="container"></app-gifs-page>
+ 
 </div>
