--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,3 +1,15 @@
-<div class="col">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+<div class="row">
+    <div *ngFor="let item of resultados"
+         class="col-md-4 col-ms-6">
+        <div class="card">
+            <img [src]="item.images.downsized_medium.url" 
+                 [alt]="item.title"
+                 class="card-img-top"> 
+            <div class="card-body">
+                <div class="card-text">
+                    {{item.title}}
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
