--- a/src/app/shared/sidebar.component.html
+++ b/src/app/shared/sidebar.component.html
@@ -4,14 +4,10 @@
     </h3>
     <hr class="text-white" />
     <div class="list-group list-reset">
-        <a href="#" class="list-group-item list-group-item-action">
-            Dashboard
+        <a href="#" 
+           class="list-group-item list-group-item-action"
+           *ngFor="let item of historial">
+           {{item | titlecase}}
         </a>
     </div>
-    <ul class="list-group mt-1"> 
-        <li *ngFor="let item of historial"
-            class="list-group-item list-group-item-primary mt-1">
-            {{item | uppercase}}
-        </li>
-    </ul>
 </div>
