--- a/src/app/shared/sidebar.component.html
+++ b/src/app/shared/sidebar.component.html
@@ -4,7 +4,8 @@
     </h3>
     <hr class="text-white" />
     <div class="list-group list-reset">
-        <a href="#" 
+        <a (click)="search(item)"
+           href="#" 
            class="list-group-item list-group-item-action"
            *ngFor="let item of historial">
            {{item | titlecase}}
