--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,12 +1,13 @@
 <div class="row">
     <div *ngFor="let item of resultados"
          class="col-md-4 col-ms-6">
-        <div class="card">
+        <div class="card animate__fadeIn">
             <img [src]="item.images.downsized_medium.url" 
                  [alt]="item.title"
                  class="card-img-top"> 
             <div class="card-body">
                 <div class="card-text">
+                    {{item.title}}
                 </div>
             </div>
         </div>
