App Search Country Finish

--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,7 +1,7 @@
+<div class="animate__animated animate__fadeInRight animate__fast" >
 <h2>Por Capital</h2>
 <hr>
 
-<div class="col">
     <div class="col">
         <app-pais-input
         (onEnter)="buscar($event)"
