--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,15 +1,30 @@
-<h2>Por País</h2>
-<hr>
-
-<div class="col">
+<div class="animate__animated animate__fadeInRight animate__fast" >
+    <h2>Por País</h2>
+    <hr>
+    
     <div class="col">
-        <app-pais-input
-        (onEnter)="buscar($event)"
-        (onDebounce)="sugerencias($event)"
-        placeholder="Buscar país...">
-    </app-pais-input>
+        <div class="col">
+            <app-pais-input
+            (onEnter)="buscar($event)"
+            (onDebounce)="sugerencias($event)"
+            placeholder="Buscar país...">
+        </app-pais-input>
+        </div>
     </div>
 </div>
+<ul class="list-group" *ngIf="mostrarSugerencias">
+    <li class="list-group-item list-group-item-action" *ngFor="let paises of paisesSugeridos">
+        <a class="nav-link" [routerLink]="['pais/', paises.cca2]">
+            {{paises.name.common}}
+        </a>
+    </li>
+    <li class="list-group-item list-group-item-action"
+        (click)="buscar(termino)">
+        <a class="nav-link">
+            Buscar "{{termino}}"
+        </a>
+    </li>
+</ul>
 
 <hr>
 
