--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -9,13 +9,13 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let pais of paises; index as i">
+        <tr *ngFor="let pais of paises; index as i" class="animate__animated animate__fadeInRight animate__fast">
             <td>{{i+1}}</td>
             <td><img [src]="pais.flags.png" alt="Flag Image" class="small-flag"></td>
             <td>{{pais.capital}}, {{pais.name.common}}</td>
             <td>{{pais.population}}</td>
             <td>
-                <a [routerLink]="['pais/', pais.cioc]">Ver..</a>
+                <a [routerLink]="['pais/', pais.cca2]">Ver..</a>
             </td>
         </tr>
     </tbody>
