--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,34 @@
-<p>por-region works!</p>
+<div class="animate__animated animate__fadeInRight animate__fast" >
+    <h3>Buscar por region <small> {{regionActiva | titlecase}} </small></h3>
+    <hr>
+    
+    <h5>Seleccione la region</h5>
+    
+    <div>
+        <div>
+            <button *ngFor="let region of regiones"
+                [class]="getClassCSS(region)"
+                (click)='activarRegion(region)'>
+                {{region | titlecase}}
+            </button>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+</div>
+
+<!-- class="btn" -->
+<!-- class=" (region === regionActiva) ? 'btn btn-primary' : 'btn btn-outline-primary' " -->
+<!-- class="btn btn-outline-primary" -->
+<!-- [class.btn-primary]="region === regionActiva" -->
+<!-- [ngClass]="{'btn-primary': region === regionActiva}" -->
+<!-- [class.abc]="region === regionActiva" -->
+
+<!-- [ngClass]="{
+    'btn-primary': region === regionActiva,
+    'btn-outline-primary': region !== regionActiva
+}" -->
