--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -4,11 +4,70 @@
     class=""alert alert-info>
     Espere por favor...
 </div>
-<ng-template #divPais>
-    <div class="row">
-        <div class="col-12">
-            <h1>Pais: <small>{{pais.name}}</small></h1>
-        </div>
-    </div>
-</ng-template>
 
+<div class="animate__animated animate__fadeInRight animate__fast">
+
+    <ng-template #divPais>
+        <div class="row">
+            <div class="col-12">
+                <h1>Pais: <small>{{pais[0].name.common}}</small></h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <h3>Bandera</h3>
+                <img [src]="pais[0].flags.png" alt="Flag" class="img-thumbnail">
+            </div>
+            <div class="col">
+                <h3>Informacion</h3>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <strong>Poblacion </strong>{{pais[0].population | number}}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Codigo numerico </strong>{{pais[0].ccn3}}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Codigo Alpha </strong>{{pais[0].cca3}}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Idiomas </strong>
+                        <span *ngFor="let language of languages">
+                            {{language}},
+                        </span>
+                    </li> 
+                    <li class="list-group-item">
+                        <strong>Region </strong>{{pais[0].region}}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Sub-Region </strong>{{pais[0].subregion}}
+                    </li>
+                    <div *ngFor="let capital of pais[0].capital;  let i=index">
+                        <li class="list-group-item">
+                            <strong>Capital {{i+1}} </strong>{{capital}}
+                        </li>
+                    </div>
+                </ul>
+            </div>
+        </div>
+        
+        <h3>Traducciones</h3>
+        <div class="row">
+            <div class="col">
+                <span class="badge bg-primary me-1">{{pais[0].translations.spa.common}}</span>
+                <span class="badge bg-primary me-1">{{pais[0].translations.ita.common}}</span>
+                <span class="badge bg-primary me-1">{{pais[0].translations.fra.common}}</span>
+                <span class="badge bg-primary me-1">{{pais[0].translations.jpn.common}}</span>
+                <span class="badge bg-primary me-1">{{pais[0].translations.rus.common}}</span>
+                <span class="badge bg-primary me-1">{{pais[0].translations.fin.common}}</span>
+                <span class="badge bg-primary me-1">{{pais[0].translations.ara.common}}</span>
+                <span class="badge bg-primary me-1">{{pais[0].translations.ces.common}}</span>
+                <span class="badge bg-primary me-1">{{pais[0].translations.zho.common}}</span>
+            </div>
+        </div>
+    </ng-template>
+    
+    <!-- <pre class="mt-5">
+        {{pais | json}}
+    </pre> -->
+</div>
