--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,25 @@
-<p>ordenar works!</p>
+<div class="text-color">
+    <h1>Pipes Personalisados</h1>
+    <p>Pipes creados por {{'nosotros' | mayusculas:enMayuscula}}</p>
+
+    <button pButton pRipple type="button" 
+            label="Toggle Mayusculas" 
+            class="p-button-outlined p-button-danger"
+            (click)="enMayusculas()">
+    </button>
+</div>
+
+<p-toolbar>
+    <div class="p-toolbar-group-left">
+        <p-button label="New" icon="pi pi-plus"></p-button>
+        <p-button label="Upload" icon="pi pi-upload" styleClass="p-button-success"></p-button>
+            
+        <i class="pi pi-bars"></i>
+    </div>
+    
+    <div class="p-toolbar-group-right">
+        <p-button icon="pi pi-search"></p-button>
+        <p-button icon="pi pi-calendar" styleClass="p-button-success"></p-button>
+        <p-button icon="pi pi-times" styleClass="p-button-danger"></p-button>
+    </div>
+</p-toolbar>
