--- a/src/app/ventas/pages/numeros/numeros.component.html
+++ b/src/app/ventas/pages/numeros/numeros.component.html
@@ -7,24 +7,21 @@
 
 <div class="grid">
     <div class="col-4">
-        <p-card header="Ventas Netas"
-            subheader="del presente año">
+        <p-card header="Ventas Netas" subheader="del presente año">
             <i class="pi pi-dollar"></i>
-            {{ventasNetas | number:'1.2-2' }}
+            {{netSales | number:'1.2-2' }}
         </p-card>
     </div>
 
     <div class="col-4">
-        <p-card header="Ventas Brutas"
-            subheader="del presente año">
-            {{ventasNetas | currency:'DOP':'symbol-narrow':'1.4-4' }}
+        <p-card header="Ventas Brutas" subheader="del presente año">
+            {{netSales | currency:'DOP':'symbol-narrow':'1.4-4' }}
         </p-card>
     </div>
 
     <div class="col-4">
-        <p-card header="Ganancia Porcentual"
-            subheader="del presente año">
-            {{ porsentaje | percent:'2.-2-2' }}
+        <p-card header="Ganancia Porcentual" subheader="del presente año">
+            {{ percentage | percent:'1.1-2' }}
         </p-card>
     </div>
 </div>
