--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,25 +1,69 @@
 <div class="text-color">
     <h1>Pipes Personalisados</h1>
-    <p>Pipes creados por {{'nosotros' | mayusculas:enMayuscula}}</p>
+    <p>Pipes creados por {{'nosotros' | mayusculas: capitalLetters}}</p>
 
-    <button pButton pRipple type="button" 
-            label="Toggle Mayusculas" 
-            class="p-button-outlined p-button-danger"
-            (click)="enMayusculas()">
-    </button>
 </div>
 
 <p-toolbar>
-    <div class="p-toolbar-group-left">
-        <p-button label="New" icon="pi pi-plus"></p-button>
-        <p-button label="Upload" icon="pi pi-upload" styleClass="p-button-success"></p-button>
-            
-        <i class="pi pi-bars"></i>
-    </div>
-    
+    <div class="p-toolbar-group-left"></div>
+
     <div class="p-toolbar-group-right">
-        <p-button icon="pi pi-search"></p-button>
-        <p-button icon="pi pi-calendar" styleClass="p-button-success"></p-button>
-        <p-button icon="pi pi-times" styleClass="p-button-danger"></p-button>
+
+        <button pButton label="Toggle Mayusculas" class="p-button-danger mr-1" (click)="inCapitalLetters()">
+        </button>
+
+        <button pButton label="Por nombre" icon="pi pi-sort" class="mr-1" (click)="changeSort('name')">
+        </button>
+
+        <button pButton label="Vuela" icon="pi pi-sort" class="mr-1 p-button-success" (click)="changeSort('fliying')">
+        </button>
+
+        <button pButton label="Por color" icon="pi pi-sort" class="mr-1 p-button-help" (click)="changeSort('color')">
+        </button>
     </div>
 </p-toolbar>
+
+<div class="grid">
+    <div class="col mt-2">
+        <p-table [value]="heroes | sort: sortBy" responsiveLayout="scroll">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th> Nombre</th>
+                    <th> Vuela </th>
+                    <th> Color </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-heroe>
+                <tr>
+                    <td>{{heroe.name}}</td>
+                    <td>{{heroe.fliying | fliying | titlecase}}</td>
+                    <td>{{heroe.color | color}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
+
+<div class="grid">
+    <div class="col mt-2">
+        <p-table [value]="heroes | slice:0" responsiveLayout="scroll">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th pSortableColumn="name">Nombre<p-sortIcon field="name"></p-sortIcon>
+                    </th>
+                    <th pSortableColumn="fliying">Vuela <p-sortIcon field="fliying"></p-sortIcon>
+                    </th>
+                    <th pSortableColumn="color">Color <p-sortIcon field="color"></p-sortIcon>
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-heroe>
+                <tr>
+                    <td>{{heroe.name}}</td>
+                    <td>{{heroe.fliying | fliying | titlecase}}</td>
+                    <td>{{heroe.color | color}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
