--- a/src/app/heroes/pages/heroes-home/heroes-home.component.html
+++ b/src/app/heroes/pages/heroes-home/heroes-home.component.html
@@ -1,5 +1,16 @@
-<h1>HeroesApp</h1>
-<hr>
+<mat-drawer-container fullscreen>
 
-<router-outlet></router-outlet>
+    <mat-sidenav #sidenav>
+        <h1>Sidenav</h1>
+    </mat-sidenav>
+
+    <mat-toolbar>
+        <button mat-icon-button
+                (click)="sidenav.toggle()">
+            <mat-icon>menu</mat-icon>
+        </button>
+     </mat-toolbar>
+
+</mat-drawer-container>
+
 
