--- a/src/app/heroes/pages/heroes-home/heroes-home.component.html
+++ b/src/app/heroes/pages/heroes-home/heroes-home.component.html
@@ -1,7 +1,38 @@
-<mat-drawer-container fullscreen>
+<mat-sidenav-container fullscreen>
 
-    <mat-sidenav #sidenav>
-        <h1>Sidenav</h1>
+    <mat-sidenav #sidenav mode="push">
+        <mat-toolbar color="warn">
+            <span>Menu</span>
+            <div class="spacer"></div>
+            <button mat-icon-button
+                    (click)="sidenav.toggle()">
+                <mat-icon>menu</mat-icon>
+            </button>
+         </mat-toolbar>
+
+         <mat-nav-list>
+             <a routerLink="./list"
+                mat-list-item
+                (click)="sidenav.toggle()">
+                <mat-icon mat-list-icon>label</mat-icon>
+                 <span>Listado de Héroes</span>
+             </a>
+
+             <a routerLink="./add"
+                mat-list-item
+                (click)="sidenav.toggle()">
+                <mat-icon mat-list-icon>add</mat-icon>
+                 <span>Añadir Héroes</span>
+             </a>
+
+             <a routerLink="./search"
+                mat-list-item
+                (click)="sidenav.toggle()">
+                <mat-icon mat-list-icon>search</mat-icon>
+                 <span>Búscar Héroes</span>
+             </a>
+         </mat-nav-list>
+         
     </mat-sidenav>
 
     <mat-toolbar>
@@ -9,8 +40,17 @@
                 (click)="sidenav.toggle()">
             <mat-icon>menu</mat-icon>
         </button>
+        
+        <div class="spacer"></div>
+        <button mat-stroked-button color="warn">
+            Logout
+        </button>
      </mat-toolbar>
 
-</mat-drawer-container>
+     <div class="container">
+         <router-outlet></router-outlet>
+     </div>
+     
+</mat-sidenav-container>
 
 
