--- a/src/app/heroes/pages/search/search.component.html
+++ b/src/app/heroes/pages/search/search.component.html
@@ -1,1 +1,26 @@
-<p>search works!</p>
+
+<div fxLayout="column">
+    <div>
+        <h1>Buscador de Heroe</h1>
+        <mat-divider></mat-divider>
+    </div>
+    <div>
+        <h3>Buscador</h3>
+
+        <mat-form-field>
+            <mat-label>Number</mat-label>
+            <input type="text"
+                   placeholder="Pick one"
+                   aria-label="Heroe Name"
+                   matInput
+                   [(ngModel)]="term"
+                   [matAutocomplete]="auto"
+                   (input)="searching()">
+            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+              <mat-option *ngFor="let heroe of heroes" [value]="heroe">
+                {{heroe.superhero}}
+              </mat-option>
+            </mat-autocomplete>
+        </mat-form-field>
+    </div>
+</div>
