Finish canActive, canLoad, Auth, localStorge

--- a/src/app/heroes/pages/heroes-home/heroes-home.component.html
+++ b/src/app/heroes/pages/heroes-home/heroes-home.component.html
@@ -42,9 +42,16 @@
         </button>
         
         <div class="spacer"></div>
+        
+        <div>
+            <span class="material-icons">person</span>
+            {{ user.usuario }}
+        </div>
+        
         <button mat-stroked-button 
                 color="warn"
-                (click)="logout()">
+                (click)="logout()"
+                class="ml-10">
             Logout
         </button>
      </mat-toolbar>
