--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -17,7 +17,21 @@
 
     <li *ngFor="let item of reactiveMenu"
         class="list-group-item"
-        [routerLink]="[ item.ruta ]"
+        [routerLink]= "[ item.ruta ]"
+        routerLinkActive="active">
+        {{ item.texto }}
+    </li>
+
+</ul>
+
+<h2 class="mt-3">Validaciones</h2>
+<hr>
+
+<ul class="list-group">
+
+    <li *ngFor="let item of authMenu"
+        class="list-group-item"
+        [routerLink]= "[ item.ruta ]"
         routerLinkActive="active">
         {{ item.texto }}
     </li>
